edit test code and some can't test waiting for system fix some bug
Former-commit-id: b0a7724b0b3fd52296a89ad7d7430a2421c10e81

--- a/src/ptest/MakeFile.am
+++ b/src/ptest/MakeFile.am
@@ -23,4 +23,5 @@ soypay_ptest_LDADD += $(BDB_LIBS)
 soypay_ptest_SOURCES = \
   p_test.cpp \
   main_tests.cpp \
-  miner_tests.cpp
+  miner_tests.cpp \
+  vmfun_tests.cpp
