--- a/src/ptest/MakeFile.am
+++ b/src/ptest/MakeFile.am
@@ -24,4 +24,6 @@ soypay_ptest_SOURCES = \
   p_test.cpp \
   main_tests.cpp \
   miner_tests.cpp \
-  vmfun_tests.cpp
+  updateaccount_tests.cpp \
+  vmfun_tests.cpp  
+
