delete script.cpp script.h modify bitcoin to soypay

--- a/configure.ac
+++ b/configure.ac
@@ -116,7 +116,7 @@ AC_ARG_WITH([protoc-bindir],[AS_HELP_STRING([--with-protoc-bindir=BIN_DIR],[spec
 
 
 AC_CONFIG_SRCDIR([src])
-AC_CONFIG_HEADERS([src/bitcoin-config.h])
+AC_CONFIG_HEADERS([src/soypay-config.h])
 
 dnl Checks for programs.
 AC_PROG_CXX
