change test_bitcoin filename

--- a/src/test/Makefile.am
+++ b/src/test/Makefile.am
@@ -49,7 +49,7 @@ soypay_test_SOURCES = \
   netbase_tests.cpp \
   serialize_tests.cpp \
   sigopcount_tests.cpp \
-  test_bitcoin.cpp \
+  test_soypay.cpp \
   uint256_tests.cpp \
   util_tests.cpp \
   sighash_tests.cpp \
