--- a/src/ptest/MakeFile.am
+++ b/src/ptest/MakeFile.am
@@ -26,5 +26,6 @@ soypay_ptest_SOURCES = \
   miner_tests.cpp \
   updateaccount_tests.cpp \
   vmfun_tests.cpp \
-  rollbackdb_ptest.cpp 
+  rollbackdb_ptest.cpp \
+  scriptaccount_ptest.cpp
 
