--- a/src/ptest/MakeFile.am
+++ b/src/ptest/MakeFile.am
@@ -27,5 +27,6 @@ soypay_ptest_SOURCES = \
   updateaccount_tests.cpp \
   vmfun_tests.cpp \
   rollbackdb_ptest.cpp \
-  scriptaccount_ptest.cpp
+  scriptaccount_ptest.cpp \
+  mining_tests.cpp
 
