appaccouut api test ok
Former-commit-id: fca18b05478483b44385b5e06739afdc5a101946 [formerly fca18b05478483b44385b5e06739afdc5a101946 [formerly fca18b05478483b44385b5e06739afdc5a101946 [formerly f471e109edf35ce56e47feb2a0c4da43935e956b]]]
Former-commit-id: 90b85ca21931f5fe682e8b74c5539fa28f8525a0
Former-commit-id: bd70a9bb9e5f54505f7d2dee976af3fd55cb3fbe [formerly a1ec730fefe0948bf9237f75daaaed3deff9060f]
Former-commit-id: 511a3dcc0934dd590baa8d7e8f408758273867f5

--- a/src/test/Makefile.am
+++ b/src/test/Makefile.am
@@ -66,6 +66,7 @@ dacrs_test_SOURCES = \
   p2plottery_test.cpp \
   pressure_tests.cpp \
   scriptdbex_tests.cpp	\
+  appacc_test.cpp \
   $(JSON_TEST_FILES) $(RAW_TEST_FILES)
 
 #if ENABLE_WALLET
