added appuwer api
Signed-off-by: ranger.shi <ranger.shi@gmail.com>

Former-commit-id: b6ea38f38f318617b94119c4fbc1f6d965854e8e [formerly b6ea38f38f318617b94119c4fbc1f6d965854e8e [formerly fbd1325ad40ed025a0ab7301ed79e5774940a20c]]
Former-commit-id: c6dcdb6a53a668c38450d33bc5a88014ca43433c
Former-commit-id: b694056efa2cb78fe9f67b9040568c153a5518ba

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -84,13 +84,15 @@ VM_H = \
 	vm/vm8051.h \
 	vm/vmrunevn.h \
 	vm/script.h \
-	vm/testmcu.h
+	vm/testmcu.h \
+	vm/appuseraccout.h
 
 VM_CPP = \
 	vm/vm8051.cpp \
 	vm/vmrunevn.cpp \
 	vm/script.cpp \
-	vm/testmcu.cpp
+	vm/testmcu.cpp \
+	vm/appuseraccout.cpp
   
 
 obj/build.h: FORCE
