--- a/src/dacrsd-res.rc
+++ b/src/dacrsd-res.rc
@@ -2,7 +2,7 @@
 #include "clientversion.h"       // holds the needed client version information
 
 #define VER_PRODUCTVERSION     CLIENT_VERSION_MAJOR,CLIENT_VERSION_MINOR,CLIENT_VERSION_REVISION,CLIENT_VERSION_BUILD
-#define VER_PRODUCTVERSION_STR STRINGIZE(CLIENT_VERSION_MAJOR) "." STRINGIZE(CLIENT_VERSION_MINOR) "." STRINGIZE(CLIENT_VERSION_REVISION) "." STRINGIZE(CLIENT_VERSION_BUILD)
+#define VER_PRODUCTVERSION_STR "v" STRINGIZE(CLIENT_VERSION_MAJOR) "." STRINGIZE(CLIENT_VERSION_MINOR) "." STRINGIZE(CLIENT_VERSION_REVISION) "." STRINGIZE(CLIENT_VERSION_BUILD)
 #define VER_FILEVERSION        VER_PRODUCTVERSION
 #define VER_FILEVERSION_STR    VER_PRODUCTVERSION_STR
 #define COPYRIGHT_STR          "2014-" STRINGIZE(COPYRIGHT_YEAR) " The Dacrs Core developers"
@@ -19,7 +19,7 @@ BEGIN
         BEGIN
             VALUE "CompanyName",        "Dacrs"
             VALUE "FileDescription",    "dacrs-d (OSS daemon/client for dacrs)"
-            VALUE "FileVersion",        VER_FILEVERSION_STR
+            VALUE "FileVersion",        VER_PRODUCTVERSION_STR
             VALUE "InternalName",       "dacrs-d"
             VALUE "LegalCopyright",     COPYRIGHT_STR
             VALUE "LegalTrademarks1",   "Distributed under the MIT/X11 software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
