1.增加 lua 解释器，备份。
Signed-off-by: bille <bille@qq.com>

--- a/src/Makefile.include
+++ b/src/Makefile.include
@@ -9,6 +9,7 @@ AM_CPPFLAGS =  $(INCLUDES) \
   -I$(top_builddir)/src/obj \
   $(BDB_CPPFLAGS) \
   $(BOOST_CPPFLAGS) $(BOOST_INCLUDES)
+#  $(BOOST_CPPFLAGS) $(BOOST_INCLUDES) -fPIC
 AM_CPPFLAGS += $(LEVELDB_CPPFLAGS)
 AM_LDFLAGS = $(PTHREAD_CFLAGS)
 
