--- a/src/test/Makefile.am
+++ b/src/test/Makefile.am
@@ -24,7 +24,7 @@ RAW_TEST_FILES = data/alertTests.raw.h
 
 # test_dspay binary #
 dacrs_test_CPPFLAGS = $(AM_CPPFLAGS) $(TESTDEFS)
-dacrs_test_LDADD = $(LIBBITCOIN_SERVER) $(LIBBITCOIN_WALLET) $(LIBBITCOIN_CLI) $(LIBBITCOIN_COMMON) $(LIBLEVELDB) $(LIBMEMENV) \
+dacrs_test_LDADD = $(LIBBITCOIN_SERVER) $(LIBBITCOIN_WALLET) $(LIBBITCOIN_CLI) $(LIBBITCOIN_COMMON) $(LIBLUA53) $(LIBLEVELDB) $(LIBMEMENV) \
   $(BOOST_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIB)
 #if ENABLE_WALLET
 #dacrs_test_LDADD += $(LIBBITCOIN_WALLET)
