--- a/src/Makefile.include
+++ b/src/Makefile.include
@@ -18,6 +18,7 @@ LIBBITCOIN_WALLET=$(top_builddir)/src/libdacrs_wallet.a
 LIBBITCOIN_COMMON=$(top_builddir)/src/libdacrs_common.a
 LIBBITCOIN_CLI=$(top_builddir)/src/libdacrs_cli.a
 LIBBITCOINQT=$(top_builddir)/src/qt/libdacrsqt.a
+LIBLUA53=$(top_builddir)/src/liblua53.a
 
 $(LIBBITCOIN):
 	$(MAKE) -C $(top_builddir)/src $(@F)
