--- a/configure.ac
+++ b/configure.ac
@@ -121,8 +121,8 @@ AC_CONFIG_HEADERS([src/dacrs-config.h])
 dnl Checks for programs.
 AC_PROG_CXX
 AC_PROG_CC
-AC_PROG_CPP
-AC_PROG_CXXCPP
+#AC_PROG_CPP
+#AC_PROG_CXXCPP
 AC_PROG_INSTALL
 AC_PROG_OBJC
 AC_PROG_LN_S
