--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@ AC_PREREQ([2.60])
 define(_CLIENT_VERSION_MAJOR, 1)
 define(_CLIENT_VERSION_MINOR, 1)
 define(_CLIENT_VERSION_REVISION, 2)
-define(_CLIENT_VERSION_BUILD, 5)
+define(_CLIENT_VERSION_BUILD, 6)
 define(_CLIENT_VERSION_IS_RELEASE, true)
 define(_COPYRIGHT_YEAR, 2015)
 AC_INIT([Dacrs Core],[_CLIENT_VERSION_MAJOR._CLIENT_VERSION_MINOR._CLIENT_VERSION_REVISION],[info@Dacrs.org],[Dacrs])
@@ -121,8 +121,8 @@ AC_CONFIG_HEADERS([src/dacrs-config.h])
 dnl Checks for programs.
 AC_PROG_CXX
 AC_PROG_CC
-AC_PROG_CPP
-AC_PROG_CXXCPP
+#AC_PROG_CPP
+#AC_PROG_CXXCPP
 AC_PROG_INSTALL
 AC_PROG_OBJC
 AC_PROG_LN_S
